--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -2,16 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import google.cloud.storage"
+    "from google.cloud import storage\n",
+    "import os\n",
+    "os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"]=\"/Users/ginocontestabile/dev/tirocinio-domenico/terraform/tf-sa.json\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,6 +24,56 @@
     "    files = [blob.name for blob in blobs]\n",
     "    return files"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bucket_name = 'etl-tesi-dev-data-ingest'\n",
+    "prefix = ''\n",
+    "dataset_id = 'marketing-raw'\n",
+    "# table_id = ''\n",
+    "\n",
+    "# Get the list of files to move\n",
+    "gcs_files = list_gcs_files(bucket_name, prefix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['click.csv',\n",
+       " 'cliente.csv',\n",
+       " 'email.csv',\n",
+       " 'invii.csv',\n",
+       " 'journey.csv',\n",
+       " 'microesiti.csv',\n",
+       " 'notifiche.csv',\n",
+       " 'sms.csv',\n",
+       " 'unsub.csv']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gcs_files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -31,7 +83,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.2"
   }
  },
